--- a/index.html
+++ b/index.html
@@ -17,14 +17,22 @@
     <header class="cabecalho">
         <img class="logo" src="assets/img/logo.png" alt="Fruta & Fruto">
         <nav class="menu">
-            <ul class="menu-lista">
-                <li class="menu-item"><a class="menu-link ativo" href="">Inicio</a></li>
-                <li class="menu-item"><a class="menu-link" href="">Receitas</a></li>
-                <li class="menu-item"><a class="menu-link"href="">Quem somos</a></li>
-                <li class="menu-item"><a class="menu-link"href="">Comunidade</a></li>
+            <ul class="menu__lista">
+                <li class="menu__item"><a class="menu__link ativo" href="">Início</a></li>
+                <li class="menu__item"><a class="menu__link" href="">Receitas</a></li>
+                <li class="menu__item"><a class="menu__link"href="">Quem somos</a></li>
+                <li class="menu__item"><a class="menu__link"href="">Comunidade</a></li>
             </ul>
         </nav>
     </header>
+    <section class="banner">
+        <img class="banne__imagem" src="" alt="">
+        <h2 class="banner__titulos">Reaproveite melhor os alimentos!</h2>
+    </section>
+    <section class="sobre">
+        <h2 class="Sobre__titulos">Receitas para economizar e ganhar saúde</h2>
+        <p class="Sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+    </section>
     
 </body>
 </html>
