--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="assets/css/menu/menu-lista.css"> 
     <link rel="stylesheet" href="assets/css/menu/menu-item.css">
     <link rel="stylesheet" href="assets/css/menu/menu-link.css">
+    <link rel="stylesheet" href="assets/css/banner/banner.css">
+    <link rel="stylesheet" href="assets/css/banner/banner-imagem.css">
+    <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
 
 </head>
 <body>
@@ -26,8 +29,8 @@
         </nav>
     </header>
     <section class="banner">
-        <img class="banne__imagem" src="" alt="">
-        <h2 class="banner__titulos">Reaproveite melhor os alimentos!</h2>
+        <img class="banner__imagem" src="assets/img/banner.png" alt="">
+        <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
     </section>
     <section class="sobre">
         <h2 class="Sobre__titulos">Receitas para economizar e ganhar saúde</h2>
