--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt-br">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
     <meta charset="UTF-8">
@@ -14,6 +14,16 @@
     <link rel="stylesheet" href="assets/css/banner/banner.css">
     <link rel="stylesheet" href="assets/css/banner/banner-imagem.css">
     <link rel="stylesheet" href="assets/css/banner/banner-titulo.css">
+    <link rel="stylesheet" href="assets/css/sobre/sobre.css">
+    <link rel="stylesheet" href="assets/css/sobre/sobre-descricao.css">
+    <link rel="stylesheet" href="assets/css/sobre/sobre-titulo.css">
+    <link rel="stylesheet" href="assets/css/receita/receita.css">
+    <link rel="stylesheet" href="assets/css/receita/receita-botao.css">
+    <link rel="stylesheet" href="assets/css/receita/receita-conteudo.css">
+    <link rel="stylesheet" href="assets/css/receita/receita-descricao.css">
+    <link rel="stylesheet" href="assets/css/receita/receita-imagem.css">
+    <link rel="stylesheet" href="assets/css/receita/receita-titulo.css">
+    <link rel="stylesheet" href="assets/css/receitas.css">
 
 </head>
 <body>
@@ -33,8 +43,59 @@
         <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
     </section>
     <section class="sobre">
-        <h2 class="Sobre__titulos">Receitas para economizar e ganhar saúde</h2>
+        <h2 class="Sobre__titulo">Receitas para economizar e ganhar saúde</h2>
         <p class="Sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+    </section>
+
+    <section class="receitas">
+        <div class="receita">
+            <img alt="Tigela de abacate" class="receita__imagem" src="./assets/img/receitas/tijela-de-abacate.png" />
+            <div class="receita__conteudo">
+                <h4 class="receita__titulo">Tigela de abacate</h4>
+                <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                <button class="receita__botao">Ver receita</button>
+            </div>
+        </div>
+        <div class="receita">
+            <img alt="Salada de kiwi" class="receita__imagem" src="./assets/img/receitas/salada-kiwi.png" />
+            <div class="receita__conteudo">
+                <h4 class="receita__titulo">Salada de kiwi</h4>
+                <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                <button class="receita__botao">Ver receita</button>
+            </div>
+        </div>
+        <div class="receita">
+            <img alt="Mix de vegetais" class="receita__imagem" src="./assets/img/receitas/mix-de-vegetais.png" />
+            <div class="receita__conteudo">
+                <h4 class="receita__titulo">Mix de vegetais</h4>
+                <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                <button class="receita__botao">Ver receita</button>
+            </div>
+        </div>
+        <div class="receita">
+            <img alt="Pimentões à Juliana" class="receita__imagem" src="./assets/img/receitas/mix-de-vegetais.png" />
+            <div class="receita__conteudo">
+                <h4 class="receita__titulo">Pimentões à Juliana</h4>
+                <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                <button class="receita__botao">Ver receita</button>
+            </div>
+        </div>
+        <div class="receita">
+            <img alt="Prato oriental" class="receita__imagem" src="./assets/img/receitas/pimentoes-a-juliana.png" />
+            <div class="receita__conteudo">
+                <h4 class="receita__titulo">Prato oriental</h4>
+                <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                <button class="receita__botao">Ver receita</button>
+            </div>
+        </div>
+        <div class="receita">
+            <img alt="Beterrabas assadas" class="receita__imagem" src="./assets/img/receitas/prato-oriental.png" />
+            <div class="receita__conteudo">
+                <h4 class="receita__titulo">Beterrabas assadas</h4>
+                <p class="receita__descricao">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
+                <button class="receita__botao">Ver receita</button>
+            </div>
+        </div>
     </section>
     
 </body>
